# ori_term

./: CLAUDE.md  Cargo.toml  README.md  build-all.sh  clippy-all.sh  lefthook.yml  test-all.sh
oriterm/: Cargo.toml  build.rs
oriterm/src/: event.rs  main.rs  tab.rs
oriterm/src/app/: chrome.rs  clipboard_ops.rs  config_reload.rs  constructors.rs  cursor_hover.rs  divider_drag.rs  event_loop.rs  floating_drag.rs  keyboard_input.rs  mod.rs  mouse_input.rs  mux_pump.rs  pane_ops.rs  perf_stats.rs  redraw.rs  search_ui.rs  tab_bar_input.rs  tests.rs  window_context.rs  window_management.rs
oriterm/src/app/chrome/: mod.rs  resize.rs
oriterm/src/app/clipboard_ops/: mod.rs  tests.rs
oriterm/src/app/cursor_blink/: mod.rs  tests.rs
oriterm/src/app/init/: mod.rs
oriterm/src/app/keyboard_input/: action_dispatch.rs  ime.rs  mod.rs  overlay_dispatch.rs  tests.rs
oriterm/src/app/mark_mode/: mod.rs  motion.rs  tests.rs
oriterm/src/app/mouse_report/: mod.rs  tests.rs
oriterm/src/app/mouse_selection/: helpers.rs  mod.rs  tests.rs
oriterm/src/app/mux_pump/: mod.rs
oriterm/src/app/pane_ops/: floating.rs  helpers.rs  mod.rs
oriterm/src/app/redraw/: draw_helpers.rs  mod.rs  multi_pane.rs  preedit.rs  search_bar.rs
oriterm/src/app/snapshot_grid/: mod.rs  tests.rs
oriterm/src/app/tab_drag/: merge.rs  mod.rs  tear_off.rs  tests.rs
oriterm/src/app/tab_management/: mod.rs  move_ops.rs  tests.rs
oriterm/src/cli/: mod.rs  tests.rs
oriterm/src/clipboard/: mod.rs  tests.rs  unix.rs  windows.rs
oriterm/src/config/: color_config.rs  font_config.rs  io.rs  mod.rs  monitor.rs  tests.rs
oriterm/src/config/monitor/: mod.rs  tests.rs
oriterm/src/domain/: local.rs
oriterm/src/font/: mod.rs  tests.rs
oriterm/src/font/collection/: face.rs  loading.rs  metadata.rs  mod.rs  tests.rs
oriterm/src/font/discovery/: families.rs  linux.rs  macos.rs  mod.rs  tests.rs  windows.rs
oriterm/src/font/shaper/: mod.rs  tests.rs  ui_text.rs
oriterm/src/gpu/: mod.rs  pipeline_tests.rs  state.rs  transparency.rs  visual_regression.rs
oriterm/src/gpu/atlas/: mod.rs  tests.rs
oriterm/src/gpu/bind_groups/: mod.rs
oriterm/src/key_encoding/: kitty.rs  legacy.rs  mod.rs  tests.rs
oriterm/src/keybindings/: defaults.rs  mod.rs  parse.rs  tests.rs
oriterm/src/mux/: event_pump.rs  floating_ops.rs  mod.rs  tests.rs
oriterm/src/mux_event/: mod.rs  tests.rs
oriterm/src/pane/: mod.rs  tests.rs
oriterm/src/platform/: mod.rs
oriterm/src/pty/: event_loop.rs  mod.rs  reader.rs  signal.rs  spawn.rs  tests.rs
oriterm/src/scheme/: builtin.rs  mod.rs  tests.rs
oriterm/src/session/: mod.rs
oriterm/src/shell_integration/: interceptor.rs  tests.rs
oriterm/src/tab/: mark_cursor.rs  mod.rs  tests.rs
oriterm/src/url_detect/: mod.rs  tests.rs
oriterm/src/window/: mod.rs
oriterm_core/: Cargo.toml
oriterm_core/benches/: grid.rs
oriterm_core/src/: lib.rs  theme.rs  unicode.rs
oriterm_core/src/cell/: mod.rs
oriterm_core/src/color/: mod.rs  palette.rs
oriterm_core/src/event/: mod.rs
oriterm_core/src/grid/: mod.rs  snapshot.rs  stable_index.rs  tests.rs
oriterm_core/src/image/: mod.rs
oriterm_core/src/paste/: tests.rs
oriterm_core/src/search/: text.rs
oriterm_core/src/selection/: boundaries.rs  mod.rs  tests.rs  text.rs
oriterm_core/src/sync/: mod.rs  tests.rs
oriterm_core/src/term/: alt_screen.rs  mod.rs  mode.rs  renderable.rs  shell_state.rs  snapshot.rs  tests.rs
oriterm_core/src/theme/: tests.rs
oriterm_ipc/: Cargo.toml
oriterm_ipc/src/: addr.rs  lib.rs
oriterm_ipc/src/unix/: client_stream.rs  listener.rs  mod.rs  process.rs  stream.rs
oriterm_ipc/src/windows/: client_stream.rs  listener.rs  mod.rs  pipe_name.rs  process.rs  stream.rs
oriterm_ipc/tests/: ipc_roundtrip.rs
oriterm_mux/: Cargo.toml
oriterm_mux/shell-integration/bash/: bash-preexec.sh  oriterm.bash
oriterm_mux/shell-integration/powershell/: oriterm.ps1
oriterm_mux/shell-integration/zsh/: .zshenv  oriterm-integration
oriterm_mux/src/: lib.rs
oriterm_mux/src/backend/: mod.rs
oriterm_mux/src/discovery/: mod.rs  tests.rs
oriterm_mux/src/domain/: local.rs  mod.rs  wsl.rs
oriterm_mux/src/id/: mod.rs  tests.rs
oriterm_mux/src/in_process/: event_pump.rs  floating_ops.rs  mod.rs  tests.rs
oriterm_mux/src/layout/: mod.rs
oriterm_mux/src/mux_event/: mod.rs  tests.rs
oriterm_mux/src/nav/: mod.rs  tests.rs
oriterm_mux/src/pane/: mod.rs  selection.rs  shutdown.rs
oriterm_mux/src/protocol/: codec.rs  messages.rs  mod.rs  msg_type.rs  snapshot.rs  tests.rs
oriterm_mux/src/pty/: mod.rs  signal.rs  spawn.rs
oriterm_mux/src/registry/: mod.rs  tests.rs
oriterm_mux/src/server/: clients.rs  connection.rs  dispatch.rs  frame_io.rs  ipc.rs  mod.rs  notify.rs  pid_file.rs  snapshot.rs  tests.rs
oriterm_mux/src/session/: mod.rs  tests.rs
oriterm_mux/src/shell_integration/: inject.rs  interceptor.rs  mod.rs  scripts.rs  tests.rs
oriterm_mux/tests/: contract.rs  e2e.rs
oriterm_ui/: Cargo.toml  build.rs
oriterm_ui/src/: lib.rs  platform_linux.rs  platform_macos.rs  platform_windows.rs  widget_id.rs
oriterm_ui/src/animation/: mod.rs  sequence.rs  tests.rs
oriterm_ui/src/color/: mod.rs  tests.rs
oriterm_ui/src/compositor/: layer.rs  layer_animator.rs  layer_tree.rs  tests.rs  transform.rs
oriterm_ui/src/draw/: draw_list.rs  tests.rs
oriterm_ui/src/focus/: mod.rs  tests.rs
oriterm_ui/src/geometry/: insets.rs  mod.rs  point.rs  rect.rs  size.rs  tests.rs  transform2d.rs
oriterm_ui/src/hit_test/: mod.rs  tests.rs
oriterm_ui/src/input/: event.rs  hit_test.rs  mod.rs  routing.rs  tests.rs
oriterm_ui/src/layout/: constraints.rs  flex.rs  layout_box.rs  layout_node.rs  mod.rs  size_spec.rs  solver.rs  tests.rs
oriterm_ui/src/overlay/: manager.rs  mod.rs  overlay_id.rs  placement.rs  tests.rs
oriterm_ui/src/platform_windows/: mod.rs
oriterm_ui/src/scale/: mod.rs  scale_factor.rs  tests.rs
oriterm_ui/src/text/: mod.rs  tests.rs
oriterm_ui/src/theme/: mod.rs
oriterm_ui/src/widgets/: mod.rs  tests.rs  text_measurer.rs
oriterm_ui/src/window/: mod.rs
(+259 files in other folders)
