[package]
name = "oriterm"
version = "0.1.0-alpha.3"
edition = "2024"
description = "GPU-accelerated terminal emulator"
license = "MIT"

[dependencies]
oriterm_core = { path = "../oriterm_core" }
oriterm_ui = { path = "../oriterm_ui" }

log = "0.4"
parking_lot = "0.12"
pollster = "0.4"
portable-pty = "0.9.0"
rustybuzz = "0.20"
swash = "0.2"
unicode-segmentation = "1.12"
unicode-width = "0.2"
vte = { version = "0.15.0", features = ["ansi"] }
wgpu = "28"
winit = "0.30"
bitflags = "2"
base64 = "0.22"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
notify = "8"
regex = "1"
window-vibrancy = "0.7"

[features]
default = []

[target.'cfg(not(windows))'.dependencies]
arboard = "3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"
dwrote = "0.11"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Console", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[[bin]]
name = "oriterm"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]

[lints]
workspace = true
