[package]
name = "oriterm"
version.workspace = true
edition.workspace = true
description = "GPU-accelerated terminal emulator"
license.workspace = true

[dependencies]
oriterm_core = { path = "../oriterm_core" }
oriterm_mux = { path = "../oriterm_mux" }
oriterm_ui = { path = "../oriterm_ui" }

clap = { version = "4", features = ["derive"] }
clap_complete = "4"
log = "0.4"
parking_lot = "0.12"
pollster = "0.4"
portable-pty = "0.9.0"
rustybuzz = "0.20"
skrifa = "0.40"
swash = "0.2"
tiny-skia = "0.11"
unicode-segmentation = "1.12"
unicode-width = "0.2"
vte = { version = "0.15.0", features = ["ansi"] }
wgpu = "28"
winit = "0.30"
bitflags = "2"
base64 = "0.22"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
notify = "8"
regex = "1"
window-vibrancy = "0.7"

[features]
default = []
gpu-tests = []

[target.'cfg(not(windows))'.dependencies]
arboard = "3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
arboard = "3"
clipboard-win = "5.4"
dwrote = "0.11"
windows-sys = { version = "0.60", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_System_Console", "Win32_System_Registry", "Win32_System_Threading", "Win32_UI_Controls", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

[[bin]]
name = "oriterm"
path = "src/main.rs"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
anyhow = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"

[lints]
workspace = true
