[package]
name = "oriterm_core"
version = "0.1.0-alpha.3"
edition = "2024"
description = "Core terminal emulation data structures and logic for oriterm"
license = "MIT"

[dependencies]
base64 = "0.22"
bitflags = "2"
log = "0.4"
parking_lot = "0.12"
unicode-width = "0.2"
vte = { version = "0.15.0", features = ["ansi"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"

[[bench]]
name = "grid"
harness = false

[lints]
workspace = true
