[package]
name = "oriterm_core"
version.workspace = true
edition.workspace = true
description = "Core terminal emulation data structures and logic for oriterm"
license.workspace = true

[features]
default = ["image-protocol"]
image-protocol = ["dep:image"]

[dependencies]
base64 = "0.22"
bitflags = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"], optional = true }
log = "0.4"
parking_lot = "0.12"
regex = "1"
unicode-width = "0.2"
vte = { version = "0.15.0", features = ["ansi"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"

[[bench]]
name = "grid"
harness = false

[lints]
workspace = true
