[package]
name = "oriterm_ipc"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Platform-specific IPC abstraction for oriterm daemon mode"
license = "MIT"

[dependencies]
log = "0.4"
mio = { version = "1", features = ["os-poll", "os-ext", "net"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Threading",
] }

# Cannot use `workspace = true` and override `unsafe_code` simultaneously.
# Copy the workspace lints here with `unsafe_code = "allow"`.
[lints.rust]
unsafe_code = "allow"
dead_code = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
enum_glob_use = "deny"
if_not_else = "deny"
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
or_fun_call = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
unnecessary_self_imports = "warn"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
collapsible_if = "allow"
manual_let_else = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_tightening = "allow"
similar_names = "allow"
suboptimal_flops = "allow"
too_many_arguments = "deny"
too_many_lines = "deny"
uninlined_format_args = "allow"
unreadable_literal = "deny"
unused_self = "deny"
