[package]
name = "oriterm_mux"
version = "0.1.0-alpha.3"
edition = "2024"
description = "Multiplexer for oriterm: data structures, PTY management, daemon server, and IPC protocol"
license = "MIT"

[dependencies]
bincode = "1.3"
log = "0.4"
mio = { version = "1", features = ["os-poll", "net", "os-ext"] }
oriterm_core = { path = "../oriterm_core" }
oriterm_ipc = { path = "../oriterm_ipc" }
parking_lot = "0.12"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
vte = { version = "0.15.0", features = ["ansi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "oriterm-mux"
path = "src/bin/oriterm_mux.rs"

[lints]
workspace = true
