[package]
name = "oriterm_ui"
version = "0.1.0-alpha.3"
edition = "2024"
description = "UI framework types: geometry, hit testing, scale factor, window management"
license = "MIT"

[dependencies]
log = "0.4"
winit = "0.30"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
