[package]
name = "oriterm_ui"
version = "0.1.0-alpha.3"
edition = "2024"
description = "UI framework types: geometry, hit testing, scale factor, window management"
license = "MIT"

[dependencies]
log = "0.4"
smallvec = "1"
winit = "0.30"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
