[package]
name = "oriterm_ui"
version.workspace = true
edition.workspace = true
description = "UI framework types: geometry, hit testing, scale factor, window management"
license.workspace = true

[dependencies]
log = "0.4"
oriterm_core = { path = "../oriterm_core" }
smallvec = "1"
unicode-segmentation = "1.12"
winit = "0.30"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[lints]
workspace = true
